    - fixed constant handling with parameters
    - fixed InitLocals initialization for method bodies
    - fixed branch to self causes stack overflow, patch by Brien Sourceforge
    - fixed crash with unsupported assemblies
    - fixed grid refresh for method overrides 
    - fixed offset compute after code injection

////////////////////////////////////////////////////////////////////////////////
// v1.0 - 23/10/2009 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - proper configuration for code injection with .NET 3.5 compiled files
    - using up to date Mono.Cecil.Pdb (now fully managed)

  bugfixes:
    - fixed ArgumentOutOfRange with some compile errors (replace all with code)
    - fixed error CS0006: Metadata file '...' could not be found    
    
////////////////////////////////////////////////////////////////////////////////
// v0.9.1 - 30/04/2009 /////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - check if .NET Framework v3.5 is installed

  bugfixes:
    - some debug code was left, causing errors to users without "c:" drive.
    
  misc:
    - source code cleanup
  
////////////////////////////////////////////////////////////////////////////////
// v0.9 - 28/01/2009 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - instruction offset column
    - code editor intellisense 
    - region folding
    - insight window
    
  bugfixes:
    - assembly browser was only listening to mouse events
    - fix combobox rendering errors without visual themes
    
  misc:
    - source code cleanup
  
////////////////////////////////////////////////////////////////////////////////
// v0.8 - 25/05/2008 ///////////////////////////////////////////////////////////